--- a/src/pagina-inicial/index.html
+++ b/src/pagina-inicial/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Flamenco:wght@300;400&display=swap" rel="stylesheet">
-    <title>Meu Hamburguer</title>
+    <title>Meu Hamburguer - BRAZINÃO</title>
 </head>
 
 <body>
