adiocionado o que faltava para conclusao da pg, porem ainda falta coisas 06/11

--- a/src/pagina-inicial/index.html
+++ b/src/pagina-inicial/index.html
@@ -76,7 +76,8 @@
             <input id="input-pesquisa" type="text" name="" id="input-pesquisa" placeholder="Digite aqui">
             <h2 id="h2">Ou</h2>
             <h2 id="outro-h2">Encontre o Brazinão mais próximo de você</h2>
-            <p id="paragrafo-da-pesquisa">Preencha seu endereço no campo acima ou busque por restaurantes próximos a você (lembre-se de ativar sua localização no navegador caso esteja desativada).</p>
+            <p id="paragrafo-da-pesquisa">Preencha seu endereço no campo acima ou busque por restaurantes próximos a
+                você (lembre-se de ativar sua localização no navegador caso esteja desativada).</p>
             <button id="buscar-restaurantes">Buscar Restaurantes</button>
 
         </section>
@@ -84,10 +85,11 @@
         <section id="section-img-final">
             <img id="img-final" src="/img/coma como um rei.png" alt="">
 
-        </section> 
+        </section>
 
         <footer id="section-final">
-            <img id="celular" src="/img/Todo Dia Um Burger em Promoção Preto Iluminado Story do Instagram (2).gif" alt="celular">
+            <img id="celular" src="/img/Todo Dia Um Burger em Promoção Preto Iluminado Story do Instagram (2).gif"
+                alt="celular">
             <h1 id="h1-baixe-o-app">BAIXE NOSSO APP E TENHA O BRAZINÃO NA PALMA DE SUA MÃO!</h1>
         </footer>
 
@@ -97,22 +99,37 @@
         </footer>
 
         <footer id="final-footer">
-            <img id="last-logo" src="/img/Logo_de_Hamburgueria_Artesanal-removebg-preview.png" alt="">
-            <br>
-            <a href="">APP BRAZINÃO</a>
-            <a href="">Sobre o BZ</a>
-            <a href="">Trabalhe conosco</a>
-            <a href="">Fale conosco</a>
-            <a href="">Seja um franqueado</a>
-            <a href="">Relações com investidores</a>
+
+            <section id="section-img-br-final">
+                <img id="last-logo" src="/img/Logo_de_Hamburgueria_Artesanal-removebg-preview.png" alt="">
+            </section>
+
+            <section id="section-links-final">
+                <a href="">APP BRAZINÃO</a>
+                <a href="">Sobre o BZ</a>
+                <a href="">Trabalhe conosco</a>
+                <a href="">Fale conosco</a>
+                <a href="">Seja um franqueado</a>
+                <a href="">Relações com investidores</a>
+            </section>
         </footer>
 
         <footer id="rodape">
             <h1>Compartilhe algo delicioso</h1>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1735.0292960658624!2d-50.78914806112409!3d-29.57289846099612!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951923b371172c49%3A0xae09cf352b1ea900!2sR.%20Osvaldo%20Cruz%20-%20Centro%2C%20Igrejinha%20-%20RS%2C%2095650-000!5e0!3m2!1spt-BR!2sbr!4v1699315876089!5m2!1spt-BR!2sbr"
+                width="400" height="350" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </footer>
+
+
 
     </main>
     <script src="/dinamismo/index.js"></script>
 </body>
 
-</html> 
+</html>
